<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_hukin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/hukin"
            android:textSize="18sp"

            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_sukuwato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/sukuwato"
            android:textSize="18sp"

            android:layout_weight="1"/>


    </LinearLayout>


    <TextView
        android:id="@+id/text_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#FFFFFF" />

    <TextView
    android:id="@+id/text_max"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="これまでの最高："
    android:textSize="24sp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/button_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/home"
        android:textSize="18sp" />


</LinearLayout>